Changes (Family + localization)

--- a/CS601_HW1_Vashishta/HomePage.html
+++ b/CS601_HW1_Vashishta/HomePage.html
@@ -23,7 +23,7 @@
     <img src="Media/FancyDSLR.png" alt="My Wife knows how to use a camera" width="470" height="400">
     <h2>About Me</h2>
     <p>
-        <a href="https://twitter.com/twitter/status/1445078208190291973?lang=en" target="_blank" title="Tweet">Hello
+        <a href="https://twitter.com/twitter/status/1445078208190291973?lang=en" title="Tweet">Hello
             literally everyone!</a> Just kidding, we don't like Twitter anymore. My wife was a software engineer at
         Twitter one day and the next day Thanos (aka Musk) snapped his fingers.
         <br>
@@ -44,20 +44,33 @@
         <br>
     </p>
     <h2>FAQ</h2>
-    <ol>
-        <li>
+    <table>
+        <caption>FAQ: Questions for me</caption>
+        <thead>
+            <tr>
+                <th>Question</th>
+                <th>Answer</th>
+                <th>Link</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Who is your family?</td>
+                <td>I have a wonderful wife, parents and a brother. You can find out more about them in the link provided</td>
+                <td><a href="FamilyAboutPage.html" title="About family">FamilyAboutLink</a></td>
+            </tr>
+        </tbody>
             Who is your family?
             <br>
-            You can read more about them <a href="FamilyAboutPage.html" target="_blank" title="About family">here</a>
+            You can read more about them <a href="FamilyAboutPage.html" title="About family">here</a>
         </li>
         <li>
             Where have you lived?
             <br>
-            See a map of all the places I've lived <a href="Locations.html" target="_blank"
-                title="Saahil's Locations">here</a>
+            See a map of all the places I've lived <a href="Locations.html" title="Saahil's Locations">here</a>
         </li>
         <li>What are your hobbies?</li>
-    </ol>
+    </table>
 </body>
 
 </html>
