--- a/CS601_HW1_Vashishta/Locations.html
+++ b/CS601_HW1_Vashishta/Locations.html
@@ -20,6 +20,7 @@
         </ul>
     </nav>
     <h1>World Map</h1>
+    <img src="Media/PlacesLived.png"  alt="Places Lived" width="1709" height="894">
 </body>
 
 </html>
