--- a/CS601_HW1_Vashishta/FamilyAboutPage.html
+++ b/CS601_HW1_Vashishta/FamilyAboutPage.html
@@ -19,11 +19,58 @@
             <li><a href="Locations.html">Locations</a></li>
         </ul>
     </nav>
-    <h1>Family Tree</h1>
+    <h1>My Family</h1>
+    <p>Here is one of the few photos that has my entire immediate family in it</p>
+    <img src ="Media/MyFamilia.JPG" alt ="My Family" width="1000" height="700">
     <h2>Wife</h2>
+    <p>
+        My wife's name is Cheyenne. We met at Purdue, where she made the more logical decision to pursue computer engineering while I was stuck doing Mechanical Engineering.
+        <br>
+        Up until few days ago, she was working for Twitter, but due to Thanos snapping his finger, she ceased to exist in Twitter's database. She loves hiking, running and travelling with me.
+        <br>
+        Here you can see our recent trip to Hawaii that we had been saving up forever...
+    </p>
+    <video src ="Media/2022Hawaiian.MOV" controls width="470" height="400"></video>
+    <p> Feel free to download the video if you are unable to view it on your device <a href = "Media/2022Hawaiian.MOV">here.</a></p>
     <h2>Mother</h2>
+    <p>
+        My mother's name is Sangeeta. She was born in New Delhi India and pursued her bachelor's and masters in Finance. 
+        <br>
+        Mad respect for the lady since she gave her career to make sure my brother and I had a good one. 
+        <br>
+        I love my mother because of all the personal and emotional sacrifices she has made for me and also because she is genuinely an amazing person.
+        <br>
+        My wife loves her since they're reading and gossiping buddies.
+        <br>
+        Here is a picture of my mother in seattle hanging out with my wife and I.
+    </p>
+    <img src ="Media/Mother.jpg" alt ="My Mother" width="1000" height="750">
+
     <h2>Father</h2>
+    <p>
+        My father's name is Sanjeev. Just like my mother, he was also born in New Delhi India and pursued his bachelor's and masters in Finance followed by an MBA.
+        <br>
+        He works for a medical company in India and has a busy job. My mother and father met in college (just like my wife and I). 
+        <br>
+        In his free time, my father loves travelling.
+        <br>
+        Here is a picture of my father, my mother and I from my Indian wedding in Indianapolis (what a coincidence, Indian and Indianapolis, get it?)
+        <br>
+    </p>
+    <img src ="Media/Father.jpg" alt ="My Father" width="640" height="950">
+    <p> Here is a fun(sarcasm) video of my father talking about what he does in case you're interested. <a href = "https://www.youtube.com/watch?v=f8IUZudMHg0">Interview Link.</a></p>
     <h2>Brother</h2>
+    <p>
+        My brother's name is Sanchay. He pursued his undergraduate degree in supply chain management from Penn State Univesity, a big 10 competitor for Purdue so BOOOOOO.
+        <br>
+        He currently works for Mylan Pharmaceuticals (Another person in the medical industry). My brother is more of a friend to me than a brother.
+        <br>
+        If we have a console around and FIFA, that's what you would find us play. Minutes turn into hours and hours can possibly turn into days playing FIFA.
+        <br>
+       Here is a picture of my brother and I hanging out in Olympic National park, WA.
+        <br>
+    </p>
+    <img src ="Media/Brother.JPG" alt ="My Father" width="1000" height="750">
 </body>
 
 </html>
