Fine tuning and commenting

--- a/CS601_HW1_Vashishta/HomePage.html
+++ b/CS601_HW1_Vashishta/HomePage.html
@@ -12,15 +12,20 @@
 <!-- Adding the Body to the page in the head section below -->
 
 <body>
+    <!-- Adding a navigation section -->
     <nav>
+        <!-- Navigation section is an unordered list -->
         <ul>
             <li><a href="HomePage.html">Home</a></li>
             <li><a href="FamilyAboutPage.html">Vashishta Family</a></li>
             <li><a href="Locations.html">Locations</a></li>
         </ul>
     </nav>
+    <!-- The first section -->
     <h1>A Conventional 'Hello World' from Saahil Vashishta </h1>
+    <!-- Adding an image to the page -->
     <img src="Media/FancyDSLR.png" alt="My Wife knows how to use a camera" width="470" height="400">
+    <!-- The second section -->
     <h2>About Me</h2>
     <p>
         <a href="https://twitter.com/twitter/status/1445078208190291973?lang=en" title="Tweet">Hello
@@ -43,7 +48,8 @@
         and who doesn't like the idea of making an application and selling it to be a unicorn?
         <br>
     </p>
-    <h2>FAQ</h2>
+    <!-- Adding the 3rd section, which is a table -->
+    <h3>FAQ</h3>
     <table>
         <caption>FAQ: Questions for me</caption>
         <thead>
@@ -59,17 +65,22 @@
                 <td>I have a wonderful wife, parents and a brother. You can find out more about them in the link provided</td>
                 <td><a href="FamilyAboutPage.html" title="About family">FamilyAboutLink</a></td>
             </tr>
+            <tr>
+                <td>Where have you lived?</td>
+                <td>Chandigarh,(India),New Delhi (India), West Lafeyette(Indiana), Seattle(WA) </td>
+                <td><a href="Locations.html" title="Saahil's Locations">LocationsLink</a></td>
+            </tr>
+            <tr>
+                <td>What are your hobbies?</td>
+                <td>I love playing the piano, hiking, running, working out and travelling.</td>
+                <td>Coming Soon</td>
+            </tr>
         </tbody>
-            Who is your family?
-            <br>
-            You can read more about them <a href="FamilyAboutPage.html" title="About family">here</a>
-        </li>
-        <li>
-            Where have you lived?
-            <br>
-            See a map of all the places I've lived <a href="Locations.html" title="Saahil's Locations">here</a>
-        </li>
-        <li>What are your hobbies?</li>
+        <tfoot>
+            <tr>
+                <td class ="center" colspan ="3">Last updated 11/6/2022.</td>
+            </tr>
+        </tfoot>
     </table>
 </body>
 
