--- a/CS601_HW1_Vashishta/FamilyAboutPage.html
+++ b/CS601_HW1_Vashishta/FamilyAboutPage.html
@@ -12,15 +12,19 @@
 <!-- Adding the Body to the page in the head section below -->
 
 <body>
+    <!-- Adding a navigation section -->
     <nav>
+        <!-- Navigation section is an unordered list -->
         <ul>
             <li><a href="HomePage.html">Home</a></li>
             <li><a href="FamilyAboutPage.html">Vashishta Family</a></li>
             <li><a href="Locations.html">Locations</a></li>
         </ul>
     </nav>
+    <!-- The first section -->
     <h1>My Family</h1>
     <p>Here is one of the few photos that has my entire immediate family in it</p>
+     <!-- Adding the first photo on the page -->
     <img src ="Media/MyFamilia.JPG" alt ="My Family" width="1000" height="700">
     <h2>Wife</h2>
     <p>
@@ -30,8 +34,10 @@
         <br>
         Here you can see our recent trip to Hawaii that we had been saving up forever...
     </p>
-    <video src ="Media/2022Hawaiian.MOV" controls width="470" height="400"></video>
+    <!-- Adding the first video on the page -->
+    <video src ="Media/2022Hawaiian.MOV" type="video/MOV" controls width="470" height="400"></video>
     <p> Feel free to download the video if you are unable to view it on your device <a href = "Media/2022Hawaiian.MOV">here.</a></p>
+    <!-- The second section -->
     <h2>Mother</h2>
     <p>
         My mother's name is Sangeeta. She was born in New Delhi India and pursued her bachelor's and masters in Finance. 
@@ -44,11 +50,12 @@
         <br>
         Here is a picture of my mother in seattle hanging out with my wife and I.
     </p>
+    <!-- Adding the second photo on the page -->
     <img src ="Media/Mother.jpg" alt ="My Mother" width="1000" height="750">
-
-    <h2>Father</h2>
+    <!-- The third section -->
+    <h3>Father</h3>
     <p>
-        My father's name is Sanjeev. Just like my mother, he was also born in New Delhi India and pursued his bachelor's and masters in Finance followed by an MBA.
+        My father's name is Sanjeev. Just like my mother, he was also born in New Delhi, India and pursued his bachelor's and masters in Finance followed by an MBA.
         <br>
         He works for a medical company in India and has a busy job. My mother and father met in college (just like my wife and I). 
         <br>
@@ -57,9 +64,14 @@
         Here is a picture of my father, my mother and I from my Indian wedding in Indianapolis (what a coincidence, Indian and Indianapolis, get it?)
         <br>
     </p>
-    <img src ="Media/Father.jpg" alt ="My Father" width="640" height="950">
+    <!-- Adding the third photo on the page -->
+        <img src ="Media/Father.jpg" alt ="My Father" width="640" height="950">
+    <!-- Adding a video link and embedding it on the page -->
     <p> Here is a fun(sarcasm) video of my father talking about what he does in case you're interested. <a href = "https://www.youtube.com/watch?v=f8IUZudMHg0">Interview Link.</a></p>
-    <h2>Brother</h2>
+    <!-- Taking information from youtube share, embed option for optimal performance -->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/f8IUZudMHg0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <!-- The fourth section -->
+    <h4>Brother</h4>
     <p>
         My brother's name is Sanchay. He pursued his undergraduate degree in supply chain management from Penn State Univesity, a big 10 competitor for Purdue so BOOOOOO.
         <br>
@@ -70,6 +82,7 @@
        Here is a picture of my brother and I hanging out in Olympic National park, WA.
         <br>
     </p>
+    <!-- Adding the fourth photo on the page -->
     <img src ="Media/Brother.JPG" alt ="My Father" width="1000" height="750">
 </body>
 
