Final changes before feedback

--- a/CS601_HW1_Vashishta/FamilyAboutPage.html
+++ b/CS601_HW1_Vashishta/FamilyAboutPage.html
@@ -35,7 +35,7 @@
         Here you can see our recent trip to Hawaii that we had been saving up forever...
     </p>
     <!-- Adding the first video on the page -->
-    <video src ="Media/2022Hawaiian.MOV" type="video/MOV" controls width="470" height="400"></video>
+    <video src ="Media/2022Hawaiian.MOV" controls width="470" height="400"></video>
     <p> Feel free to download the video if you are unable to view it on your device <a href = "Media/2022Hawaiian.MOV">here.</a></p>
     <!-- The second section -->
     <h2>Mother</h2>
@@ -69,7 +69,7 @@
     <!-- Adding a video link and embedding it on the page -->
     <p> Here is a fun(sarcasm) video of my father talking about what he does in case you're interested. <a href = "https://www.youtube.com/watch?v=f8IUZudMHg0">Interview Link.</a></p>
     <!-- Taking information from youtube share, embed option for optimal performance -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/f8IUZudMHg0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/f8IUZudMHg0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <!-- The fourth section -->
     <h4>Brother</h4>
     <p>
