--- a/CS601_HW1_Vashishta/HomePage.html
+++ b/CS601_HW1_Vashishta/HomePage.html
@@ -22,7 +22,7 @@
         </ul>
     </nav>
     <!-- The first section -->
-    <h1>A Conventional 'Hello World' from Saahil Vashishta </h1>
+    <h1><marquee>A Conventional 'Hello World' from Saahil Vashishta</marquee></h1>
     <!-- Adding an image to the page -->
     <img src="Media/FancyDSLR.png" alt="My Wife knows how to use a camera" width="470" height="400">
     <!-- The second section -->
