--- a/CS601_HW2_Vashishta/Locations.html
+++ b/CS601_HW2_Vashishta/Locations.html
@@ -7,6 +7,7 @@
 <head>
     <title>Saahil Vashishta - Locations</title>
     <meta charset="UTF-8">
+    <link href="ExternalStyleSheet.css" rel="stylesheet">
 </head>
 
 <!-- Adding the Body to the page in the head section below -->
