--- a/CS601_HW2_Vashishta/HomePage.html
+++ b/CS601_HW2_Vashishta/HomePage.html
@@ -7,6 +7,7 @@
 <head>
     <title>Saahil Vashishta - Home</title>
     <meta charset="UTF-8">
+    <link href="ExternalStyleSheet.css" rel="stylesheet">
 </head>
 
 <!-- Adding the Body to the page in the head section below -->
@@ -21,7 +22,7 @@
             <li><a href="Locations.html">Locations</a></li>
         </ul>
     </nav>
-    <!-- The first section -->
+    <!-- The first section, using marquee for a fancy banner -->
     <h1><marquee>A Conventional 'Hello World' from Saahil Vashishta</marquee></h1>
     <!-- Adding an image to the page -->
     <img src="Media/FancyDSLR.png" alt="My Wife knows how to use a camera" width="470" height="400">
