--- a/CS601_HW2_Vashishta/FamilyAboutPage.html
+++ b/CS601_HW2_Vashishta/FamilyAboutPage.html
@@ -14,7 +14,7 @@
 
 <body>
     <!-- Adding a navigation section -->
-    <nav>
+    <nav class="list--">
         <!-- Navigation section is an unordered list -->
         <ul>
             <li><a href="HomePage.html">Home</a></li>
@@ -23,10 +23,10 @@
         </ul>
     </nav>
     <!-- The first section -->
-    <h1>My Family</h1>
-    <p>Here is one of the few photos that has my entire immediate family in it</p>
+    <h1 class="SectionTitles">My Family</h1>
+      <p>Here is one of the few photos that has my entire immediate family in it</p>
     <!-- Adding the first photo on the page -->
-    <img src="Media/MyFamilia.JPG" alt="My Family" width="1000" height="700">
+    <img src="Media/MyFamilia.JPG" alt="My Family" width=90% height=80%>
     <h2>Wife</h2>
     <p>
         My wife's name is Cheyenne. We met at Purdue, where she made the more logical decision to pursue computer
@@ -38,11 +38,11 @@
         Here you can see our recent trip to Hawaii that we had been saving up forever...
     </p>
     <!-- Adding the first video on the page -->
-    <video src="Media/2022Hawaiian.MOV" controls width="470" height="400"></video>
-    <p> Feel free to download the video if you are unable to view it on your device <a
-            href="Media/2022Hawaiian.MOV">here.</a></p>
+    <video src="Media/2022Hawaiian.MOV" controls width=30% height=40%></video>
+    <p> Feel free to download the video if you are unable to view it on your device <a href="Media/2022Hawaiian.MOV"
+            target="_blank">here.</a></p>
     <!-- The second section -->
-    <h2>Mother</h2>
+    <h2 class="SectionTitles">Mother</h2>
     <p>
         My mother's name is Sangeeta. She was born in New Delhi India and pursued her bachelor's and masters in Finance.
         <br>
@@ -56,9 +56,9 @@
         Here is a picture of my mother in seattle hanging out with my wife and I.
     </p>
     <!-- Adding the second photo on the page -->
-    <img src="Media/Mother.jpg" alt="My Mother" width="1000" height="750">
+    <img src="Media/Mother.jpg" alt="My Mother" width=30% height=40%>
     <!-- The third section -->
-    <h3>Father</h3>
+    <h3 class="SectionTitles">Father</h3>
     <p>
         My father's name is Sanjeev. Just like my mother, he was also born in New Delhi, India and pursued his
         bachelor's and masters in Finance followed by an MBA.
@@ -73,16 +73,16 @@
         <br>
     </p>
     <!-- Adding the third photo on the page -->
-    <img src="Media/Father.jpg" alt="My Father" width="640" height="950">
+    <img src="Media/Father.jpg" alt="My Father" width=30% height=40%>
     <!-- Adding a video link and embedding it on the page -->
     <p> Here is a fun(sarcasm) video of my father talking about what he does in case you're interested. <a
-            href="https://www.youtube.com/watch?v=f8IUZudMHg0">Interview Link.</a></p>
+            href="https://www.youtube.com/watch?v=f8IUZudMHg0" target="_blank">Interview Link.</a></p>
     <!-- Taking information from youtube share, embed option for optimal performance -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/f8IUZudMHg0" title="YouTube video player"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    <iframe width=30% height=40% src="https://www.youtube.com/embed/f8IUZudMHg0" title="YouTube video player"
+     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
     <!-- The fourth section -->
-    <h4>Brother</h4>
+    <h4 class="SectionTitles">Brother</h4>
     <p>
         My brother's name is Sanchay. He pursued his undergraduate degree in supply chain management from Penn State
         Univesity, a big 10 competitor for Purdue so BOOOOOO.
@@ -97,7 +97,7 @@
         <br>
     </p>
     <!-- Adding the fourth photo on the page -->
-    <img src="Media/Brother.JPG" alt="My Father" width="1000" height="750">
+    <img src="Media/Brother.JPG" alt="My Brother" width=30% height=40%>
 </body>
 
 </html>
