--- a/CS601_HW2_Vashishta/Locations.html
+++ b/CS601_HW2_Vashishta/Locations.html
@@ -23,47 +23,55 @@
         </ul>
     </nav>
     <!-- The first section -->
-    <h1>World Map</h1>
+    <h1 class="SectionTitles">World Map</h1>
     <!-- Adding a map -->
-    <img src="Media/PlacesLived.png"  alt="Places Lived" width="1709" height="894">
+    <img src="Media/PlacesLived.png" alt="Places Lived" width=90% height=80%>
     <!-- The second section -->
-    <h2>Primary List of Places lived</h2>
+    <h2 class="SectionTitles">Primary List of Places lived</h2>
     <!-- Adding an ordered list-->
     <ol>
         <li>
             Chandigarh:
             <br>
-            <p>I was born in a small city called Chandigarh. It is in the northern part of India. I lived here for nearly 12 years.</p>
+            <p>I was born in a small city called Chandigarh. It is in the northern part of India. I lived here for
+                nearly 12 years.</p>
         </li>
         <li>
             New Delhi:
             <br>
-            <p>My family moved to New Delhi when I was 12. My father had another career opportunity that led him to the capital of India.</p>
+            <p>My family moved to New Delhi when I was 12. My father had another career opportunity that led him to the
+                capital of India.</p>
         </li>
         <li>
             West Lafayette, Indiana:
             <br>
-            <p>I came to the united states for my undergraduate education in Mechanical Engineering and my campus was in West Lafayette, IN.(love cornfields (sarcasm))</p>
+            <p>I came to the united states for my undergraduate education in Mechanical Engineering and my campus was in
+                West Lafayette, IN.(love cornfields (sarcasm))</p>
         </li>
         <li>
             Seattle, Washington
             <br>
-            <p>I followed my wife to Seattle after living, studying and working in Indiana for 7 years. My wife got an opportunity to work for Microsoft as a software engineer and I followed her since she got her dream job.</p>
+            <p>I followed my wife to Seattle after living, studying and working in Indiana for 7 years. My wife got an
+                opportunity to work for Microsoft as a software engineer and I followed her since she got her dream job.
+            </p>
         </li>
     </ol>
     <!-- The third section -->
-    <h3>Some other places that I have lived in for shorter durations</h3>
+    <h3 class="SectionTitles">Some other places that I have lived in for shorter durations</h3>
     <!-- Adding an unordered list-->
     <ul>
         <li>
             Mishawaka, Indiana:
             <br>
-            <p>My first summer internship in college was with a company called Siemens and they had a plant in Mishawaka. I lived there for 3 months and did not want to go back.</p>
+            <p>My first summer internship in college was with a company called Siemens and they had a plant in
+                Mishawaka. I lived there for 3 months and did not want to go back.</p>
         </li>
         <li>
             Orlando, Florida
             <br>
-            <p>My second summer internship was with Siemens power and energy and their corporate headquarters is in Orlando, FL. I enjoyed living in Orlando because Disney, Kennedy Space Center close by and proximity to beaches.</p>
+            <p>My second summer internship was with Siemens power and energy and their corporate headquarters is in
+                Orlando, FL. I enjoyed living in Orlando because Disney, Kennedy Space Center close by and proximity to
+                beaches.</p>
         </li>
     </ul>
 </body>
