Final touches assignment 2

--- a/CS601_HW2_Vashishta/HomePage.html
+++ b/CS601_HW2_Vashishta/HomePage.html
@@ -28,7 +28,7 @@
         <marquee>A Conventional 'Hello World' from Saahil Vashishta</marquee>
     </h1>
     <!-- Adding an image to the page -->
-    <img src="Media/FancyDSLR.png" alt="My Wife knows how to use a camera" width="470" height="400">
+    <img src="Media/FancyDSLR.png" alt="My Wife knows how to use a camera" width=30% height=25%>
     <!-- The second section -->
     <h2 class="SectionTitles">About Me</h2>
     <p>
@@ -76,9 +76,9 @@
                 <td><a href="Locations.html" target="_blank" title="Saahil's Locations">LocationsLink</a></td>
             </tr>
             <tr>
-                <td>What are your hobbies?</td>
-                <td>I love playing the piano, hiking, running, working out and travelling.</td>
-                <td>Coming Soon</td>
+                <td>WHere do you work?</td>
+                <td>I work for a company called Trimble. For more Information, click on the blue button below</td>
+                <td><a href="https://autonomy.trimble.com/en/" target="_blank" title="Saahil's Workplace">WorkLink</a></td>
             </tr>
         </tbody>
         <tfoot>
@@ -88,6 +88,14 @@
         </tfoot>
     </table>
     <br>
+    <br>
+    <br>
+      <!-- Adding a home page button-->
+      <button class="WorkButton" onclick="window.location.href='https://autonomy.trimble.com/en/';">
+        <span class="front">
+            Where I work
+        </span>
+    </button>
 
 </body>
 
