Fixing an error in table

--- a/CS601_HW2_Vashishta/HomePage.html
+++ b/CS601_HW2_Vashishta/HomePage.html
@@ -76,7 +76,7 @@
                 <td><a href="Locations.html" target="_blank" title="Saahil's Locations">LocationsLink</a></td>
             </tr>
             <tr>
-                <td>WHere do you work?</td>
+                <td>Where do you work?</td>
                 <td>I work for a company called Trimble. For more Information, click on the blue button below</td>
                 <td><a href="https://autonomy.trimble.com/en/" target="_blank" title="Saahil's Workplace">WorkLink</a></td>
             </tr>
