--- a/CS601_HW3_Vashishta/Calculator_Supreme.html
+++ b/CS601_HW3_Vashishta/Calculator_Supreme.html
@@ -4,8 +4,16 @@
 <head>
     <title>Calculator Supreme</title>
     <meta charset="UTF-8">
+    <link href="Calculatorstyling.css" rel="stylesheet">
 </head>
+<!-- Adding the body of the page in the section below -->
 <body>
+    <!-- Linking the javascript file -->
     <script src="calculatorjavascript.js"> </script>
+    <!-- Adding the calculator title -->
+    <h1>
+        Calculator Supreme, serving your addition needs since 2022!
+    </h1>
+    
 </body>
 </html>
