--- a/CS601_TermProject_Vashishta/FamilyAboutPage.html
+++ b/CS601_TermProject_Vashishta/FamilyAboutPage.html
@@ -21,6 +21,7 @@
             <li><a href="FamilyAboutPage.html">Vashishta Family</a></li>
             <li><a href="Locations.html">Locations</a></li>
             <li><a href ="ContactMe.html">Leave your Mark</a></li>
+            <li><a href ="Resume.html">Résumé</a></li>
         </ul>
     </nav>
     <!-- The first section -->
@@ -91,7 +92,7 @@
         He currently works for Mylan Pharmaceuticals (Another person in the medical industry). My brother is more of a
         friend to me than a brother.
         <br>
-        If we have a console around and FIFA, that's what you would find us play. Minutes turn into hours and hours can
+        If we have a console around and FIFA, that's what you would find us playing. Minutes turn into hours and hours can
         possibly turn into days playing FIFA.
         <br>
         Here is a picture of my brother and I hanging out in Olympic National park, WA.
