--- a/CS601_TermProject_Vashishta/HomePage.html
+++ b/CS601_TermProject_Vashishta/HomePage.html
@@ -22,12 +22,11 @@
             <li><a href="FamilyAboutPage.html">Vashishta Family</a></li>
             <li><a href="Locations.html">Locations</a></li>
             <li><a href ="ContactMe.html">Leave your Mark</a></li>
+            <li><a href ="Resume.html">Résumé</a></li>
         </ul>
     </nav>
     <!-- The first section, using marquee for a fancy banner -->
-    <h1>
-        <marquee>A Conventional 'Hello World' from Saahil Vashishta</marquee>
-    </h1>
+    <h1>A Conventional 'Hello World' from Saahil Vashishta</h1>
     <!-- Adding an image to the page -->
     <img src="Media/FancyDSLR.png" alt="My Wife knows how to use a camera" width=30% height=25%>
     <!-- The second section -->
