--- a/CS601_TermProject_Vashishta/ContactMe.html
+++ b/CS601_TermProject_Vashishta/ContactMe.html
@@ -7,6 +7,7 @@
     <title>Saahil Vashishta - Leave your Mark</title>
     <meta charset="UTF-8">
     <link href="ExternalStyleSheet.css" rel="stylesheet">
+    <script src="ContactMeSrpt.js"></script>
 </head>
 
 <!-- Adding the Body to the page in the head section below -->
@@ -20,6 +21,7 @@
             <li><a href="FamilyAboutPage.html">Vashishta Family</a></li>
             <li><a href="Locations.html">Locations</a></li>
             <li><a href ="ContactMe.html">Leave your Mark</a></li>
+            <li><a href ="Resume.html">Résumé</a></li>
         </ul>
     </nav>
     <!-- The first section -->
@@ -28,25 +30,28 @@
     <form name="studentForm" id="studentForm" method="post" action=>
         <!-- Adding and validating the text fields (Visitor name) -->
         <p> Enter your name:
-            <input type="text" name="Name" id="Name" minlength="2" required pattern="[a-zA-Z]+" onchange="return validateContactForm(true, false, false, false);">
+            <input type="text" name="Name" id="Name" minlength="2" required pattern="[a-zA-Z ]+" onchange="return validateContactForm(true, false, false, false);">
         </p>
         <!-- Adding the first error message -->
         <span id="NameError"></span>
         <br>
         <!-- Adding and validating the text fields (Visitor Age) This website is PG 13 -->
         <p> Enter your age:
-            <input type="number" name="Age" id="Age" min="13" onchange="return validateContactForm(false, true, false, false);">
+            <input type="number" name="Age" id="Age" min="13" max="122" onchange="return validateContactForm(false, true, false, false);">
         </p>
+        <!-- Adding the second error message -->
+        <span id="AgeError"></span>
+        <br>
         <!-- Adding and validating the text fields (Visitor Location City)-->
         <p> Enter your location city:
-            <input type="text" name="city" id="city" minlength="2" onchange="return validateContactForm(false, false, true, false);">
+            <input type="text" name="city" id="city" minlength="2" required pattern="[a-zA-Z ]+" onchange="return validateContactForm(false, false, true, false);">
         </p>
         <!-- Adding the third error message -->
         <span id="CityError"></span>
         <br>
         <!-- Adding and validating the text fields (Visitor Location Country)-->
         <p> Enter your location country:
-            <input type="text" name="country" id="country" minlength="2" onchange="return validateContactForm(false, false, false, true);">
+            <input type="text" name="country" id="country" minlength="2" required pattern="[a-zA-Z ]+" onchange="return validateContactForm(false, false, false, true);">
         </p>
         <!-- Adding the fourth error message -->
         <span id="CountryError"></span>
@@ -70,10 +75,11 @@
             <input type="checkbox" id = "cb1" name="Friend" value="Friend">From a friend <br>
             <input type="checkbox" id = "cb2" name="socialMedia" value="socialMedia">Social Media <br>
             <input type="checkbox" id = "cb3" name="BUPeer" value="BUPeer">A peer in the BU  <br>
-            <input type="checkbox" id = "cb4" name="fullStackDev" value="fullStackDev">Full-stack Developer <br>
+            <input type="checkbox" id = "cb4" name="OtherSource" value="OtherSource">Other Source <br>
             Other (please specify): <input type="text" name="otherChoice" id="otherChoice"> <br>
         </fieldset>
         <br>
+        <p><input type="submit" id="submitBt" value="Post"></p>
 
     </form>
 
