--- a/CS601_TermProject_Vashishta/Locations.html
+++ b/CS601_TermProject_Vashishta/Locations.html
@@ -21,6 +21,7 @@
             <li><a href="FamilyAboutPage.html">Vashishta Family</a></li>
             <li><a href="Locations.html">Locations</a></li>
             <li><a href ="ContactMe.html">Leave your Mark</a></li>
+            <li><a href ="Resume.html">Résumé</a></li>
         </ul>
     </nav>
     <!-- The first section -->
