--- a/CS601_TermProject_Vashishta/FamilyAboutPage.html
+++ b/CS601_TermProject_Vashishta/FamilyAboutPage.html
@@ -12,7 +12,7 @@
 
 <!-- Adding the Body to the page in the head section below -->
 
-<body>
+<body class="family">
     <!-- Adding a navigation section -->
     <nav class="list--">
         <!-- Navigation section is an unordered list -->
