--- a/CS601_TermProject_Vashishta/Locations.html
+++ b/CS601_TermProject_Vashishta/Locations.html
@@ -22,6 +22,7 @@
             <li><a href="Locations.html">Locations</a></li>
             <li><a href ="ContactMe.html">Leave your Mark</a></li>
             <li><a href ="Resume.html">Résumé</a></li>
+            <li><a href ="HobbyLobby.html">Hobby Lobby</a></li>
         </ul>
     </nav>
     <!-- The first section -->
@@ -31,7 +32,7 @@
     <!-- The second section -->
     <h2 class="SectionTitles">Primary List of Places lived</h2>
     <!-- Adding an ordered list-->
-    <ol>
+    <ol class="location">
         <li>
             Chandigarh:
             <br>
@@ -61,7 +62,7 @@
     <!-- The third section -->
     <h3 class="SectionTitles">Some other places that I have lived in for shorter durations</h3>
     <!-- Adding an unordered list-->
-    <ul>
+    <ul class="location">
         <li>
             Mishawaka, Indiana:
             <br>
