--- a/CS601_TermProject_Vashishta/Resume.html
+++ b/CS601_TermProject_Vashishta/Resume.html
@@ -22,6 +22,7 @@
             <li><a href="Locations.html">Locations</a></li>
             <li><a href ="ContactMe.html">Leave your Mark</a></li>
             <li><a href ="Resume.html">Résumé</a></li>
+            <li><a href ="HobbyLobby.html">Hobby Lobby</a></li>
         </ul>
     </nav>
     <!-- The first section -->
