--- a/CS601_TermProject_Vashishta/HomePage.html
+++ b/CS601_TermProject_Vashishta/HomePage.html
@@ -23,6 +23,8 @@
             <li><a href="Locations.html">Locations</a></li>
             <li><a href ="ContactMe.html">Leave your Mark</a></li>
             <li><a href ="Resume.html">Résumé</a></li>
+            <li><a href ="HobbyLobby.html">Hobby Lobby</a></li>
+            
         </ul>
     </nav>
     <!-- The first section, using marquee for a fancy banner -->
@@ -80,10 +82,20 @@
                 <td>I work for a company called Trimble. For more Information, click on the blue button below</td>
                 <td><a href="https://autonomy.trimble.com/en/" target="_blank" title="Saahil's Workplace">WorkLink</a></td>
             </tr>
+            <tr>
+                <td>What are some of your hobbies?</td>
+                <td>I love traveling, playing the piano and guitar, hiking, biking, paddleboarding, running, working out and spending time with my family.</td>
+                <td><a href="HobbyLobby.html" target="_blank" title="Saahil's Hobby Lobby">HobbyLobbyLink</a></td>
+            </tr>
+            <tr>
+                <td>Can we add our information to your page?</td>
+                <td>You sure can in the link on the right!</td>
+                <td><a href="ContactMe.html" target="_blank" title="Leave your mark">LeaveYourMarkLink</a></td>
+            </tr>
         </tbody>
         <tfoot>
             <tr>
-                <td class="center" colspan="3">Last updated 11/6/2022.</td>
+                <td class="center" colspan="3">Last updated 12/11/2022.</td>
             </tr>
         </tfoot>
     </table>
